--- a/Tabela/istilu.css
+++ b/Tabela/istilu.css
@@ -1,50 +1,105 @@
-#foto-redonda{
+#foto-redonda {
     border-radius: 50%;
     width: 240px;
     height: 240px;
 }
 
-.fundo{
-    background-color: #1d7b97f6;
+.fundo {
+    background-color: #212529;
 }
 
-#estrela{
+#estrela {
     width: 150px;
     height: 55px;
 }
 
-#traco{
+#traco {
     width: 2000px;
 }
 
-table, td, tr, th {
+table,
+td,
+tr,
+th {
     text-align: center;
 }
 
-.input-group{display: inline;}
+.input-group {
+    display: inline;
+}
 
-.cadastro{
-    border: solid 1px  black;
-    border-radius: 10px 0px 10px 0px;
+.cadastro {
+    /* border: solid 1px white;
+    border-radius: 10px 0px 10px 0px; */
     color: black;
-    width: 280px;;
-    margin-left: 600px;
+    width: 330px;
+    ;
+    margin-left: 530px;
     padding-bottom: 40px;
-    margin-bottom: 40px;
-    margin-top: 30px;
+    margin-bottom: 10px;
+    /* margin-top: 15px; */
     padding: 15px;
 }
 
-input{
+input {
     margin-left: 10px;
     display: list-item;
-    width: 220px;
+    width: 250px;
     border-radius: 3px;
 }
 
-.btn-botao{
+.btn-botao {
     margin-top: 10px;
     margin-left: 160px;
 }
 
-label{margin-top: 5px;}
+.meu-btn {
+    margin-top: 15px;
+    margin-left: 191px;
+}
+
+.btn {
+    margin-top: 5px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+label {
+    margin-top: 5px;
+    color: white;
+}
+
+.titulo-cadastro {
+    color: white;
+}
+
+#cliente {
+    text-align: center;
+    color: white;
+}
+
+#cor {
+    background-color: rgb(26, 26, 26);
+    height: 35px;
+}
+
+#salvar {
+    width: 69px;
+}
+
+#separamento {
+    height: 10px;
+    border: solid 1px;
+    margin-bottom: 10px;
+    background-color: rgb(54, 54, 54);
+}
+
+#Menu_cadastro {
+    border: solid 1px gray;
+    background-color: rgb(54, 54, 54);
+    width: 100%;
+    color: white;
+    font-weight: bold;
+    height: 30px;
+}
